== Released [attachment:wiki:SoftwareReleases:eLife-1.6b4.zip V1.6b4]   ==

''' Jetty ''' 

Ensure HTTPS server can deliver static HTML from address ../www. resolves [ticket:553]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b3.zip V1.6b3]   ==

''' Jetty ''' 

Updated file mappings

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b2.zip V1.6b2]   ==

''' Calendar ''' 
 
Fixed null pointer on macro save [ticket:543]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b1.zip V1.6b1]  [attachment:wiki:SoftwareReleases:eLife-1.6b1-libs.zip Libs-V1.6b1] ==

''' General '''

Released beta 1

''' Messaging '''

When a tcp client connection is dropped the list of current names will be updated and sent to all clients.
When a HTTP client calls /webclient/logout the list will also be updated and sent.

Resolves [ticket:6]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a19.zip V1.6a19] 

''' General '''

Solved CPU high usage problem. Resolves ticket [ticket:541]

''' Messaging '''

Added listing of currently known clients to each client for use with named messages. [ticket:6]
Details are at [ServerDocs/ClientCommunication]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a18.zip V1.6a18] 

''' Jetty '''

Feed jetty startup errors to the logging system to assist debugging startup problems

''' Script '''

Ensure missing script directory will not kill the system on startup

''' Templates '''

Added Jetty user / password template   realm.properties   to the templates captured in the release file

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a17.zip V1.6a17] 

''' Bootstrap '''

Added INTEGRATOR_MODE ACTIVE="Y|N"  (default N) to the bootstrap file. This will later be used to provide extra debugging of running triggers and integrator macros.

''' Labels '''

Labels moved from config file to it's own file (labels.xml under datafiles), this will facilitate label support accross multiple devices , eg. CBUS + Dynalite
 