@@ -1,4 +1,4 @@
-#Fri Nov 03 09:10:17 EST 2006
+#Tue Nov 07 08:01:48 EST 2006
 major_version=1.6b
-minor_version=4
+minor_version=5
 app_name=eLife
