@@ -1,3 +1,9 @@
+== Released [attachment:wiki:SoftwareReleases:eLife-1.6b5.zip V1.6b5]   ==
+
+''' Jetty '''
+
+Ensure message and ID list commands do not crash the server with a HTTPS client. Resolves ticket [ticket:557]
+
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6b4.zip V1.6b4]   ==
 
 ''' Jetty ''' 
